# lang2query

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Makefile  README.md  README_WORKFLOW.md  create_tables.py  customer_agent.py  docker-compose.dev.yml  docker-compose.yml  env.example  env.template  fuzzy_wuzzy.py  kb.pkl  main.py  notes.txt  pyproject.toml  requirements-dev.txt  requirements.txt  test.csv
.github/workflows/: ci.yml
app/: .prettierignore  .prettierrc  Dockerfile  README.md  config.py  eslint.config.js  main.py  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/agents/: customer.py  router.py
app/agents/helpers/: customer_helper.py
app/kb/: build_kb.py
app/services/: fuzzy.py
app/src/app/: layout.tsx  page.tsx
app/src/components/: index.ts
app/src/components/ChatContainer/: ChatContainer.tsx
app/src/components/ChatMessage/: ChatMessage.tsx
app/src/components/Header/: Header.tsx
app/src/components/LiveStateDisplay/: LiveStateDisplay.tsx  index.ts
app/src/components/MarkdownRenderer/: MarkdownRenderer.tsx
app/src/components/ProgressIndicator/: ProgressIndicator.tsx
app/src/components/QueryForm/: QueryForm.tsx  index.ts
app/src/components/QueryInput/: QueryInput.tsx  index.ts
app/src/components/QueryInterface/: QueryInterface.tsx  index.ts
app/src/components/ResultsDisplay/: ResultsDisplay.tsx  index.ts
app/src/hooks/: useSystemStatus.ts
app/src/lib/: api.ts  toast.ts  websocket.ts
app/src/styles/: globals.css
app/src/types/: index.ts
db/: create_tables.py
docs/: db_metadata.md  example_schema.json
src/: README.md  __init__.py  agent_graph.py  config.py  download.py  main.py  scripts.py  workflow.py
src/agents/: __init__.py  agent_utils.py  base_agent.py  column_identifier.py  database_identifier.py  human_in_the_loop.py  metadata_agent.py  query_generator.py  query_planner.py  query_validator.py  router.py  sample_agent.py  schema_builder.py  table_identifier.py
src/api/: app.py  mapping.py  serialization.py
src/api/routes/: query.py  system.py
src/helper/: __init__.py  workflow_helpers.py
src/lang2query/: __init__.py  cli.py  config.py  main.py  workflow.py
src/lang2query/agents/: __init__.py  base_agent.py  column_identifier.py  database_identifier.py  models.py  query_agent.py  query_generator.py  query_planner.py  query_validator.py  table_identifier.py
src/lang2query/core/: __init__.py  workflow.py
src/lang2query/models/: wrapper.py
src/lang2query/utils/: __init__.py  chunks_loader.py  db_parser.py  logger.py  logging.py
src/lib/: __init__.py  agent.py  chatgpt.py  langchain.py  nvidia.py
src/models/: __init__.py  models.py
src/retreiver/: __init__.py  create_sql_kb_embeddings.py  retrieve_sql_kb.py  sql_kb_chunker.py
src/retreiver/input/: inventory_management_db.md  payment_system_db.md  user_management_db.md
src/retreiver/output/: inventory_management_db_chunks.json  payment_system_db_chunks.json  user_management_db_chunks.json
src/tools/: __init__.py  date_tools.py  retriever_tools.py
src/utils/: __init__.py  chunk_parsers.py  logger.py  logging.py
tests/: conftest.py  test_db_parser.py  test_workflow.py
(+4 files in other folders)
