[tool.poetry]
name = "lang2query"
version = "0.1.0"
description = "A natural language to query agentic AI system"
authors = ["Nithin Pradeep <nithinp150@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "lang2query", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
openai = ">=1.101.0,<2.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
pydantic = ">=2.11.7,<3.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"
rich = ">=14.1.0,<15.0.0"
langgraph = "^0.6.6"
langchain = "^0.3.27"
langchain-openai = "^0.2.0"
requests = ">=2.31.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.10"
 

[tool.poetry.scripts]
lang2query = "lang2query.main:main"
format = "src.scripts:format"
lint = "src.scripts:lint"
lint-fix = "src.scripts:lint_fix"
test = "src.scripts:test"
 

[tool.poetry.extras]
local_model = ["torch", "transformers", "accelerate", "bitsandbytes"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]   # Errors, Formatting, Imports

 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
